[metadata]
name = django-test-plus
version = 2.2.0
description = "django-test-plus provides useful additions to Django's default TestCase"
long_description = file: README.md
long_description_content_type = text/markdown
author = Frank Wiles
author_email = frank@revsys.com
url = https://github.com/revsys/django-test-plus/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
zip_safe = False
setup_requires =
    pytest-runner
    pytest-django
tests_require = django-test-plus[test]
python_requires = >=3.6

[options.entry_points]
pytest11 =
    test_plus = test_plus.plugin

[options.extras_require]
test =
    factory-boy
    flake8
    nox
    pyflakes
    pytest
    pytest-cov
    pytest-django
    pytest-pythonpath

[bumpversion]
current_version = 2.2.0
commit = True
tag = True

[aliases]
test = pytest

[bumpversion:file:docs/conf.py]
search = version = '{current_version}'
replace = version = '{new_version}'
